@@ -23,7 +23,7 @@
  */
 package hudson;
 
-import hudson.util.TimeUnit2;
+import java.util.concurrent.TimeUnit;
 import jenkins.model.Jenkins;
 import hudson.model.Descriptor;
 import hudson.model.Saveable;
@@ -35,48 +35,70 @@ import org.kohsuke.stapler.StaplerResponse;
 
 import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.File;
 
 import net.sf.json.JSONObject;
 import com.thoughtworks.xstream.XStream;
-import java.net.URI;
-import java.net.URISyntaxException;
-import org.kohsuke.stapler.HttpResponses;
+import hudson.init.Initializer;
+import hudson.init.Terminator;
+import java.net.URL;
+import java.util.Locale;
+import java.util.logging.Logger;
+import jenkins.model.GlobalConfiguration;
 
 /**
  * Base class of Hudson plugin.
  *
  * <p>
- * A plugin may derive from this class, or it may directly define extension
+ * A plugin may {@linkplain #Plugin derive from this class}, or it may directly define extension
  * points annotated with {@link hudson.Extension}. For a list of extension
- * points, see <a href="https://wiki.jenkins-ci.org/display/JENKINS/Extension+points">
- * https://wiki.jenkins-ci.org/display/JENKINS/Extension+points</a>.
+ * points, see <a href="https://jenkins.io/redirect/developer/extension-points">
+ * https://jenkins.io/redirect/developer/extension-points</a>.
  *
  * <p>
  * One instance of a plugin is created by Hudson, and used as the entry point
  * to plugin functionality.
  *
  * <p>
- * A plugin is bound to URL space of Hudson as <tt>${rootURL}/plugin/foo/</tt>,
+ * A plugin is bound to URL space of Hudson as {@code ${rootURL}/plugin/foo/},
  * where "foo" is taken from your plugin name "foo.jpi". All your web resources
  * in src/main/webapp are visible from this URL, and you can also define Jelly
  * views against your Plugin class, and those are visible in this URL, too.
  *
  * <p>
- * {@link Plugin} can have an optional <tt>config.jelly</tt> page. If present,
+ * {@link Plugin} can have an optional {@code config.jelly} page. If present,
  * it will become a part of the system configuration page (http://server/hudson/configure).
  * This is convenient for exposing/maintaining configuration that doesn't
  * fit any {@link Descriptor}s.
  *
  * <p>
  * Up until Hudson 1.150 or something, subclasses of {@link Plugin} required
- * <tt>@plugin</tt> javadoc annotation, but that is no longer a requirement.
+ * {@code @plugin} javadoc annotation, but that is no longer a requirement.
  *
  * @author Kohsuke Kawaguchi
  * @since 1.42
  */
 public abstract class Plugin implements Saveable {
+
+    private static final Logger LOGGER = Logger.getLogger(Plugin.class.getName());
+
+    /**
+     * You do not need to create custom subtypes:
+     * <ul>
+     * <li>{@code config.jelly}, {@link #configure(StaplerRequest, JSONObject)}, {@link #load}, and {@link #save}
+     *      can be replaced by {@link GlobalConfiguration}
+     * <li>{@link #start} and {@link #postInitialize} can be replaced by {@link Initializer} (or {@link ItemListener#onLoaded})
+     * <li>{@link #stop} can be replaced by {@link Terminator}
+     * <li>{@link #setServletContext} can be replaced by {@link Jenkins#servletContext}
+     * </ul>
+     * Note that every plugin gets a {@link DummyImpl} by default,
+     * which will still route the URL space, serve {@link #getWrapper}, and so on.
+     * @deprecated Use more modern APIs rather than subclassing.
+     */
+    @Deprecated
+    protected Plugin() {}
 
     /**
      * Set by the {@link PluginManager}, before the {@link #start()} method is called.
@@ -172,12 +194,12 @@ public abstract class Plugin implements Saveable {
      * Handles the submission for the system configuration.
      *
      * <p>
-     * If this class defines <tt>config.jelly</tt> view, be sure to
+     * If this class defines {@code config.jelly} view, be sure to
      * override this method and persists the submitted values accordingly.
      *
      * <p>
-     * The following is a sample <tt>config.jelly</tt> that you can start yours with:
-     * <pre><xmp>
+     * The following is a sample {@code config.jelly} that you can start yours with:
+     * <pre>{@code <xmp>
      * <j:jelly xmlns:j="jelly:core" xmlns:st="jelly:stapler" xmlns:d="jelly:define" xmlns:l="/lib/layout" xmlns:t="/lib/hudson" xmlns:f="/lib/form">
      *   <f:section title="Locale">
      *     <f:entry title="${%Default Language}" help="/plugin/locale/help/default-language.html">
@@ -185,7 +207,7 @@ public abstract class Plugin implements Saveable {
      *     </f:entry>
      *   </f:section>
      * </j:jelly>
-     * </xmp></pre>
+     * </xmp>}</pre>
      *
      * <p>
      * This allows you to access data as {@code formData.getString("systemLocale")}
@@ -200,17 +222,21 @@ public abstract class Plugin implements Saveable {
     }
 
     /**
-     * This method serves static resources in the plugin under <tt>hudson/plugin/SHORTNAME</tt>.
+     * This method serves static resources in the plugin under {@code hudson/plugin/SHORTNAME}.
      */
     public void doDynamic(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
         String path = req.getRestOfPath();
 
-        if (path.startsWith("/META-INF/") || path.startsWith("/WEB-INF/")) {
-            throw HttpResponses.notFound();
+        String pathUC = path.toUpperCase(Locale.ENGLISH);
+        if (path.isEmpty() || path.contains("..") || path.startsWith(".") || path.contains("%")
+                || pathUC.contains("META-INF") || pathUC.contains("WEB-INF")
+                // ClassicPluginStrategy#explode produce that file to know if a new explosion is required or not
+                || pathUC.equals("/.TIMESTAMP2")
+        ) {
+            LOGGER.warning("rejecting possibly malicious " + req.getRequestURIWithQueryString());
+            rsp.sendError(HttpServletResponse.SC_BAD_REQUEST);
+            return;
         }
-
-        if(path.length()==0)
-            path = "/";
 
         // Stapler routes requests like the "/static/.../foo/bar/zot" to be treated like "/foo/bar/zot"
         // and this is used to serve long expiration header, by using Jenkins.VERSION_HASH as "..."
@@ -218,14 +244,10 @@ public abstract class Plugin implements Saveable {
         String requestPath = req.getRequestURI().substring(req.getContextPath().length());
         boolean staticLink = requestPath.startsWith("/static/");
 
-        long expires = staticLink ? TimeUnit2.DAYS.toMillis(365) : -1;
+        long expires = staticLink ? TimeUnit.DAYS.toMillis(365) : -1;
 
         // use serveLocalizedFile to support automatic locale selection
-        try {
-            rsp.serveLocalizedFile(req, wrapper.baseResourceURL.toURI().resolve(new URI(null, '.' + path, null)).toURL(), expires);
-        } catch (URISyntaxException x) {
-            throw new IOException(x);
-        }
+        rsp.serveLocalizedFile(req, new URL(wrapper.baseResourceURL, '.' + path), expires);
     }
 
 //
@@ -261,7 +283,7 @@ public abstract class Plugin implements Saveable {
      * Controls the file where {@link #load()} and {@link #save()}
      * persists data.
      *
-     * This method can be also overriden if the plugin wants to
+     * This method can be also overridden if the plugin wants to
      * use a custom {@link XStream} instance to persist data.
      *
      * @since 1.245
